--- a/2-Marcelo/Lo que quieras/style.css
+++ b/2-Marcelo/Lo que quieras/style.css
@@ -15,11 +15,11 @@ body{
     display: inline-block;
     width: 90px;
     height: 90px;
-    background: #f1f1f1;
+    background: #ffffff;
     margin: 10px;
     border-radius: 30%;
-    box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
+    box-shadow: 0 5px 15px -5px #0c0c0c;
+    color: #ffffff;
     overflow: hidden;
     position: relative;
 }
@@ -32,7 +32,7 @@ body{
 
 .btn:hover i{
     transform: scale(1.3);
-    color: #f1f1f1
+    color: #ffffff
 }
 
 .btn::before{
@@ -40,8 +40,8 @@ body{
     position: absolute;
     width: 120%;
     height: 120%;
-    background: #3498db;
-    transform: rotate(45deg);
+    background: #000000;
+    transform: rotate(90deg);
     left: -110%;
     top: 90%;
 }
